<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TemperaturasActivity"
    tools:showIn="@layout/activity_temperaturas">

    <!-- Celcius -->
    <EditText
        android:id="@+id/celciusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="118dp"
        android:ems="7"
        android:hint="@string/cel"
        android:imeOptions="actionDone|flagNoExtractUi"
        android:inputType="numberDecimal|numberSigned"
        android:maxLength="10"
        app:layout_constraintEnd_toStartOf="@+id/celciusSymbol"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/celciusSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/customCelsius"
        android:layout_centerHorizontal="true"
        android:clickable="false"
        android:linksClickable="false"
        android:text="@string/cel"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintBaseline_toBaselineOf="@+id/celciusText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/celciusText" />
    <!-- End Celsius -->

    <!-- Fahrenheit -->
    <TextView
        android:id="@+id/celciusSymbol2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/celciusText"
        android:layout_toEndOf="@+id/celciusText"
        android:clickable="false"
        android:linksClickable="false"
        android:text="@string/c_"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintBaseline_toBaselineOf="@+id/celciusText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/celciusText" />

    <EditText
        android:id="@+id/farText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:ems="7"
        android:hint="@string/far"
        android:imeOptions="actionDone|flagNoExtractUi"
        android:inputType="numberDecimal|numberSigned"
        android:maxLength="10"
        app:layout_constraintEnd_toStartOf="@+id/farSymbol"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/celciusText" />

    <TextView
        android:id="@+id/farSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/farText"
        android:layout_toEndOf="@+id/celciusText"
        android:text="@string/f_"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintBaseline_toBaselineOf="@+id/farText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/farText" />
    <!-- End Fahrenheit -->

    <TextView
        android:id="@+id/farSymbol2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/customFar"
        android:layout_centerHorizontal="true"
        android:text="@string/far"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintBaseline_toBaselineOf="@+id/farText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/farText" />

    <!-- Celcius -->
    <net.leocadio.joao.conversor.CustomCelsius
        android:id="@+id/customCelsius"
        android:layout_width="251dp"
        android:layout_height="78dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="182dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="220dp" />
    <!-- End Celcius -->

    <!-- Fahrenheit -->
    <net.leocadio.joao.conversor.CustomFar
        android:id="@+id/customFar"
        android:layout_width="251dp"
        android:layout_height="78dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="37dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="220dp" />

</RelativeLayout>